# txt-sum

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
srt_summarizor/: __init__.py  cli.py  config.py  parser.py  summarizer.py
srt_summarizor/llm/: __init__.py  lm_studio.py
tests/: __init__.py  conftest.py  test_chunking.py  test_filename_suggest.py  test_parser.py  test_provider_registry.py  test_sanitize.py
txt_sum/: __init__.py  cli.py  config.py  parser.py  summarizer.py
txt_sum/app/: __init__.py  output.py  sanitize.py  summarize.py
txt_sum/domain/: __init__.py  errors.py  types.py
txt_sum/llm/: __init__.py  lm_studio.py  qwen.py  registry.py
txt_sum/llm/providers/: __init__.py  lm_studio.py  openai.py  qwen.py
txt_sum/prompts/: __init__.py  manager.py
txt_sum/utils/: __init__.py  cli_utils.py  text_utils.py
txtguy/: __init__.py  __main__.py  cli.py  config.py  parser.py  summarizer.py
txtguy/app/: __init__.py  chunking.py  filename_suggest.py  summarize.py
txtguy/cli/: __init__.py  base.py  config.py  rename.py  summarize.py  template.py
txtguy/domain/: __init__.py  errors.py  types.py
txtguy/llm/: __init__.py  base.py  lm_studio.py  qwen.py  registry.py
txtguy/llm/providers/: __init__.py  lm_studio.py  openai.py  qwen.py
txtguy/prompts/: __init__.py  categories.py  defaults.py  manager.py
txtguy/utils/: __init__.py  cli_utils.py  file_utils.py
