[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-summarizor"
version = "0.1.0"
description = "A tool to summarize subtitle files (SRT, TXT, VTT, ASS/SSA) using LLM APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Billy Wang", email = "billy@techxartisan.com"}
]
keywords = ["srt", "subtitle", "llm", "summarization", "ai", "transcript", "summary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "charset-normalizer>=3.0.0",
    "pysrt>=1.1.2",
    "webvtt-py>=0.4.6",
]

[project.scripts]
srt-summarizor = "srt_summarizor.cli:main"

[project.urls]
Homepage = "https://github.com/youyoubilly/srt-summarizor"
Repository = "https://github.com/youyoubilly/srt-summarizor"
Issues = "https://github.com/youyoubilly/srt-summarizor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["srt_summarizor*"]

